GET users sans authentification pour UX
